...
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/activity_detail_m_t_xml_constraintlayout3_scene">

        <ImageView
            android:id="@+id/backDrop_tv"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/back_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/image"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/detail_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:maxLines="2"
                android:text="@string/title"
                android:textColor="@color/black"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/language_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="@+id/detail_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/detail_title_tv" />

            <TextView
                android:id="@+id/date_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/release_date"
                app:layout_constraintStart_toStartOf="@+id/language_detail_tv"
                app:layout_constraintTop_toBottomOf="@+id/language_detail_tv" />

            <TextView
                android:id="@+id/detail_rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/duration_s"
                app:layout_constraintStart_toStartOf="@+id/date_detail_tv"
                app:layout_constraintTop_toBottomOf="@+id/date_detail_tv" />
...
                app:layout_constraintTop_toBottomOf="@+id/detail_rating_tv" />

            <TextView
                android:id="@+id/over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ratingBar_tv"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_tv" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="@+id/over"
                app:layout_constraintTop_toBottomOf="@+id/over" />
...
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:background="@drawable/ic_baseline_star_border"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
...
