<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/activity_detail_m_t_xml_constraintlayout3_scene">

        <ImageView
            android:id="@+id/backDrop"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/back_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/image"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_detail_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back_black"
            android:contentDescription="@string/image"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300dp"
            android:background="@drawable/detail_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:maxLines="2"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/language_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="@+id/detail_title"
                app:layout_constraintTop_toBottomOf="@+id/detail_title" />

            <TextView
                android:id="@+id/date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/release_date"
                app:layout_constraintStart_toStartOf="@+id/language_detail"
                app:layout_constraintTop_toBottomOf="@+id/language_detail" />

            <TextView
                android:id="@+id/detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/duration_s"
                app:layout_constraintStart_toStartOf="@+id/date_detail"
                app:layout_constraintTop_toBottomOf="@+id/date_detail" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="10"
                android:progressTint="@color/rating"
                android:rating="3.5"
                android:scaleX="0.3"
                android:scaleY="0.3"
                android:secondaryProgressTint="@color/white"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintStart_toStartOf="@+id/detail_rating"
                app:layout_constraintTop_toBottomOf="@+id/detail_rating" />

            <TextView
                android:id="@+id/over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="@+id/over"
                app:layout_constraintTop_toBottomOf="@+id/over" />

            <TextView
                android:id="@+id/relate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/movies_relate"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/overview"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="@+id/relate"
                app:layout_constraintTop_toBottomOf="@+id/relate" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/relate_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.core.widget.NestedScrollView>

            <ProgressBar
                android:id="@+id/pbDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/star_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:background="@drawable/ic_baseline_star_border"
                android:layout_marginTop="18dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/frameLayout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_action_play"
            android:visibility="visible"
            app:backgroundTint="@color/white"
            app:elevation="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/backDrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:maxImageSize="35dp" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</ScrollView>